@@ -9,6 +9,7 @@ sfr at 0x8A TL0; //timer 0 low byte
 sfr at 0x8C TH0; //timer 0 high byte
 
 sfr16 at 0x8C8A TMR0; //timer 0
+sfr32 at 0x8C8ACDCC TIMERS; //timer 0 & 2
 #endif
 
 void
@@ -29,5 +30,9 @@ test_sfr(void)
 
   TL0++;
   ASSERT (TMR0 == 0x0101);
+
+  TIMERS = 0x12345678;
+  TIMERS -= 0x02040608;
+  ASSERT (TIMERS == 0x10305070);
 #endif
 }
